# OTCamera

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  404.html  README.md  build.py  camera.py  config.py  first_use.sh  hardware_test.py  html_playground.py  index.html  install.sh  install_dev.sh  mkdocs.yml  name.py  objects.inv  old_implementation.py  pyproject.toml  record.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  run.py  setup.cfg  setup.py  sitemap.xml  status.py  test_server.py  update_precommit.py  usb_flash_drive_copy.py  user_config.example.yaml  user_config.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cicd.yml  issue-automation.yml  issue-todo.yml  issue-unlabel-automation.yml  issue-wish.yml  linter.yml  main.yml  pr-automation.yml  test.yml
OTCamera/: __main__.py  config.py  config.yaml  html_updater.py  record.py  record_testsetting.py  status.py  user_config.yaml
OTCamera/abstraction/: singleton.py
OTCamera/calibrateotcamera/: calibration.py  guiweb.py
OTCamera/domain/: camera.py
OTCamera/gui/: gui.py  gui2.py  gui_remi.py
OTCamera/hardware/: button.py  buttons.py  camera.py  (+4 more)
config/: user_settings.yaml
docs/: config.md  gen_ref_pages.py  hardware.md  helpers.md  index.md  record.md  status.md
hardware/: index.html
otcamera/: __main__.py  config.py  status.py
raspi-files/: install_otcamera.sh  install_sshrelay.sh  otcamera.service  sshrelay.service  uninstall_otcamera.sh
scripts/: otcamera.service
search/: search_index.json
stylesheets/: color.css
tests/: __init__.py  conftest.py  html_updater_test.py  otcamera_test.py  record_test.py  test_user_config.yaml
webfiles/: fallback.html  index.html  offline.html  template.html
(+73 files in other folders)
