[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "OTCamera"
dynamic = ["dependencies", "version"]
authors = [
  { name="OpenTrafficCam contributors", email="team@opentrafficcam.org" },
  { name="platomo GmbH", email="info@platomo.de" },
]
description = "OTCamera is a core module of the OpenTrafficCam framework to record videos over multiple days with a custom camera system based on the Raspberry Pi Zero W."

readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["OpenTrafficCam", "Mobile Camera"]

[project.urls]
Homepage = "https://opentrafficcam.org/"
Documentation = "https://opentrafficcam.org/overview/"
Repository = "https://github.com/OpenTrafficCam/OTCamera"
Issues = "https://github.com/OpenTrafficCam/OTCamera/issues"
Changelog = "https://github.com/OpenTrafficCam/OTCamera/releases"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "OTCamera/version.py"

[tool.hatch.build.targets.wheel]
packages = ["OTCamera"]

[tool.hatch.build]
directory = "dist"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
ignore_missing_imports_per_module = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"